:bug: Set working directory for site

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -52,10 +52,11 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
+        working-directory: ./paper
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./public
+          path: ./paper/public
 
   # Deployment job
   deploy:
@@ -68,3 +69,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+
